--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
+    "@angular/flex-layout": "^6.0.0-beta.16",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
     "@angular/material": "^6.3.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.0",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "ng-simple-slideshow": "^1.2.3",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
